Ride 4.1 compatability plus some improvements.

--- a/Launchy_manual.html
+++ b/Launchy_manual.html
@@ -70,7 +70,7 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}b
 <p>Notes:</p>
 <ul>
 <li><code>AppData</code> is by default invisible to ordinary users.</li>
-<li><code>Program Files</code> or <code>Program Files (x86)</code> are not exactly ideal because Microsoft keeps making it harder to write to those folders. As a result Launchy would not be able to save any error information to the disk in case of a crash.)</li>
+<li><code>Program Files</code> or <code>Program Files (x86)</code> are not exactly ideal because Microsoft now prevents applications to write to those folders. As a result Launchy would not be able to save any error information to the disk in case of a crash.</li>
 </ul>
 <p>Now remove “.RemoveMe” from the name of the INI file which is by then <code>Launchy.ini.RemoveMe</code>; this is a measure against overwriting you own INI file accidentally when you update Launchy one day.</p>
 <p>With a default RIDE installation it should work out of the box. With a non-standard installation of RIDE you need to make adjustments to the INI file.</p>
