--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta charset="utf-8">
-<title>Launchy Manual</title>
+<title>Meddy</title>
 <style media="screen">
 html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}body{margin:0;}article,aside,footer,header,nav,section{display:block;}h1{font-size:2em;margin:0.67em 0;}figcaption,figure,main{display:block;}figure{margin:1em 40px;}hr{box-sizing:content-box;height:0;overflow:visible;}pre{font-family:monospace, monospace;font-size:1em;}a{background-color:transparent;-webkit-text-decoration-skip:objects;}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted;}b,strong{font-weight:inherit;}b,strong{font-weight:bolder;}code,kbd,samp{font-family:monospace, monospace;font-size:1em;}dfn{font-style:italic;}mark{background-color:#ff0;color:#000;}small{font-size:0.80em;}sub,sup{font-size:0.75em;line-height:0;position:relative;vertical-align:baseline;}sub{bottom:-0.25em;}sup{top:-0.4em;}audio,video{display:inline-block;}audio:not([controls]){display:none;height:0;}img{border-style:none;}svg:not(:root){overflow:hidden;}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:1em;line-height:1.15;margin:0;}button,input{overflow:visible;}button,select{text-transform:none;}button,html [type="button"], [type="reset"],[type="submit"]{-webkit-appearance:button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{border-style:none;padding:0;}button:-moz-focusring,[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring{outline:1px dotted ButtonText;}fieldset{padding:0.35em 0.75em 0.625em;}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal;}progress{display:inline-block;vertical-align:baseline;}textarea{overflow:auto;}[type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0;}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto;}[type="search"]{-webkit-appearance:textfield;outline-offset:-2px;}[type="search"]::-webkit-search-cancel-button,[type="search"]::-webkit-search-decoration{-webkit-appearance:none;}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit;}details, menu{display:block;}summary{display:list-item;}canvas{display:inline-block;}template{display:none;}[hidden]{display:none;}body{margin:0;font-family:Verdana, "Bitstream Vera Sans", "DejaVu Sans", Tahoma, Geneva, Arial, Sans-serif;background-color:#fdfdfd;font-size:18px;line-height:1.4;max-width:none;padding:0.83em;color:#505050;word-wrap:break-word;overflow-wrap:break-word;}h1, h2, h3, h4, h5, h6{padding-left:0;}h1, h2, h3, h4, h5, h6{font-family:"Arial Black", Arial, Helvetica, sans-serif;color:black;}h1, h2, h3, h4, p{margin-bottom:0.88em;}h1{font-size:1.7em;margin:1.11em 0 1.11em 0;}h1 > code, h2 > code, h3 > code, h4 > code, h5 > code, h6 > code{font-size:1em;background-color:inherit;}h2{font-size:1.45em;margin:0.55em 0 0.55em 0;padding-top:0.55em;border-bottom:1px solid Black;}h3{margin:1.3em 0 0.27em 0;font-size:1.22em;}h4{font-size:1.15em;margin:1.11em 0 0 0;}h5{font-size:1em;margin:0.66em 0 0 0;padding:0;}h6{font-size:0.95em;margin:0.66em 0 0 0;padding:0;}a{color:#0099ff;margin:0;padding:0;vertical-align:baseline;}a:visited{color:purple;}a.autoheader_anchor{text-decoration:none;}ul{list-style-type:disc;}p, ul, ol{line-height:1.4;padding:.55em 0 0 0;margin:0;}dd{padding-top:0.25em;}p.first_dd{padding-top:0.25em;}ul, ol{padding:0;margin:0.83em 0.83em 0.55em 1.11em;}li > ul, ol{padding-bottom:0;}li{line-height:1.3;margin-left:1.38em;margin-bottom:0.55em;}ul > li{margin-left:1.11em;}li ul{margin-left:0.55em;}li ul{margin-left:0.27em;}li p{padding:1px 0 0 0;margin:0.55em 0 0.27em 0;line-height:1.3;text-indent:0;}pre{overflow:scroll;padding:0.55em 0.27em;margin:1.11em 0 1.11em 0;background-color:black;color:#00d202;border:1px Silver solid;display:block;font-family:APLFont, monospace;white-space:pre-wrap;}pre > code{line-height:1.2;border:0;padding:0;margin:0;background-color:inherit;color:inherit;white-space:pre-wrap;}a code{padding:0;font-size:1em;}h1 code, h2 code, h3 code, h4 code, h5 code, h6 code{font-size:1em;}nav code{background-color:inherit;font-weight:400;font-size:0.77rem;}code{font-family:APLFont, monospace;background-color:#e7e7e7;color:Black;font-weight:400;line-height:1.2;font-size:0.88em;margin:0;padding:0.16em 0.44em 0.16em 0.44em;}div.leanpub table p > code{background-color:#e7e7e7 !important;}tbody th, tfoot tr{background-color:silver;}tbody tr:nth-child(even){background-color:#DEDEDE;}th{background-color:Black;color:white;font-weight:bold;}th, td{padding:0.16em 0.55em;}th > code{color:White;background-color:Black;}table{border-color:Black;margin:1.11em 0 1.11em 0;border:2px black;border-collapse:collapse;font-family:APLFont;font-size:0.88em;line-height:1.2;border:2px solid Black;}td > code{background-color:transparent;}li > table{margin:0.55em 0 0.55em 0;}tr{margin:1.11em;}tfoot td{font-weight:bold;}blockquote{border-left:0.27em solid silver;padding-left:0.27em;margin:0.83em 0.27em 0.83em 0.55em;}blockquote ul li{margin-left:1.38em;}blockquote ol li{margin-left:1.38em;}li > blockquote{margin-left:0;}nav{background-color:#f5f5f5;border:1px solid Black;padding:0.55em;margin:1.11em 2.22em;box-shadow:0.27em 0.27em 0.27em Gray;overflow:hidden;}nav#main_nav{position:fixed;top:0;right:0.55em;float:none;width:auto;}nav#main_nav_no_collapse li{font-size:0.75rem;}nav#main_nav_no_collapse li{line-height:1.5;}nav ul{list-style-type:none;margin:0 0 0.11em 0;padding:0;}nav a:visited{color:black;}nav ul li{margin-top:0.38em;margin-bottom:0.38em;}nav li p{margin:0;padding:0;line-height:1;margin:0;padding:0;}nav li{font-size:0.75rem;line-height:1.3;padding:0;margin-top:0;margin-bottom:0;margin-left:0.83em;}nav p{font-weight:bold;font-size:0.75em;padding-top:0;}dl{margin-top:0;margin-bottom:0.55em;}dt{margin-top:0.83em;margin-bottom:0.27em;font-weight:800;}label#hide_toc_label{font-size:0.80em;}.toc-container{position:relative;height:auto;}div.toc-container h3{font-size:0.88em;margin:0.55em 0.27em 0.55em 0.66em;}[type="checkbox"]{position:absolute;left:-9999px;}label{display:block;width:100%;height:1.1em;cursor:pointer;top:0;padding-left:0.55em;}label:before{content:'Table of contents \25BC';font-weight:bold;font-size:0.90em;padding-bottom:0;}[type="checkbox"] ~ div{display:none;}[type="checkbox"]:checked ~ div{display:block;margin-top:1.11em;}[type="checkbox"]:checked + label{top:100%;}[type="checkbox"]:checked + label:before{content:'Table of contents ▲';}div#footnotes_div p{line-height:1;padding-bottom:0;padding-top:0;}div#footnotes_div ol{padding-top:0;}@font-face{font-family:"APLFont";src:local("APL385 Unicode"), url("http://misc.aplteam.com/apl385.ttf") format("truetype");}.no_display{display:none;}.red{color:red;}img{margin-top:0.55em;margin-bottom:0.27em;}div.leanpub{padding:0 0.55em 0 0px;margin:1.11em 0.55em 1.11em 0.55em;overflow:auto;}div.leanpub_A{border:1px solid black;background-color:#f1f1f1;padding:0.55em;margin:1.66em 0 1.66em 0;}div.leanpub_A pre{margin:0.55em 0 0.27em 0;}div.leanpub h3, div.leanpub_A h3{font-size:1.20em;padding:0;margin:0;}div.leanpub h4, div.leanpub_A h4{font-size:1.10em;padding:0.27em 0 0 0;margin:0;}div.leanpub h5, div.leanpub h5{font-size:1.0em;padding:0.27em 0 0 0;margin:0;}div.leanpub_A h5, div.leanpub_A h5{font-size:1.0em;padding:0.27em 0 0 0;margin:0;}div.leanpub img{padding:0;margin:0 1.11em 0.27em 0;}div.leanpub tbody *{background-color:transparent;}span.leanpub_code{color:Yellow;}div.leanpub_A > p:first-child{padding-top:0;margin-top:0;}div.leanpub img{float:left;margin:0.55em 1.11em 0 0;clear:both;}div.leanpub_A p, div.leanpub p{display:block;padding:0.55em 0 0 0;text-indent:0;}div.leanpub > div{margin-left:2.27em;}.print_only{display:none;}
 </style>
@@ -14,8 +14,8 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}b
 </head>
 <body>
 <div class="h_tag">
-<a href="#Launchy-User-Manual" id="Launchy-User-Manual" class="autoheader_anchor">
-<h1>Launchy User Manual</h1>
+<a href="#Launchy" id="Launchy" class="autoheader_anchor">
+<h1>Launchy</h1>
 </a>
 </div>
 <div class="h_tag">
@@ -23,97 +23,38 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}b
 <h2>Overview</h2>
 </a>
 </div>
-<p><img src="http://misc.aplteam.com/launchy.ico" width="32" height="32" alt="Launchy's icon" title="Launchy's icon"> Launchy is designed to address the needs of developers who have more than just one version of Dyalog APL installed on their machine. It investigates the Windows Registry in order to work out which versions of Dyalog APL are installed and offers them in a drop-down control for selection.</p>
-<p>In the INI file called <code>Launchy.ini</code> one can specify a couple of things. For a programmer it should be self explanatory what the INI file entries are all about, with the noticeable exception of the [WS_CHECK] section. It is not recommended to delete or change that one.</p>
-<p>In addition to the general INI file one can also specify an INI file named <code>Launchy\_{machineName}.ini</code> which will only be instantiated on machines with matching names. This allows one to specify machine dependent INI entries, “workdir” and “wssize” being the most obvious candidates.</p>
+<p><strong><em>Launchy</em></strong> is useful for people with several versions of Dyalog installed on their machine(s).</p>
+<p>If your are like me then you have about 12 versions of Dyalog installed, and you need different versions for different projects / clients. <strong><em>Launchy</em></strong> simplifies the process of firing up an instance of Dyalog as well as making adjustments to the size of edit windows or passing parameters via the command line.</p>
+<p>In addition to its main goal <strong><em>Launchy</em></strong> offers these features:</p>
+<ul>
+<li>Start any major version of Ride installed on your machine.</li>
+<li>Store DSS credentials in the Registry.</li>
+<li>Patch the currently selected or all installed versions of Dyalog.</li>
+<li>Edit the Registry entries for the currently selected version of Dyalog.</li>
+<li>Display the online help for the currently selected version of Dyalog.</li>
+<li>Open a Windows Explorer on…
+<ul>
+<li>the install directory of the currently selected version of Dyalog.</li>
+<li>the current directory.</li>
+<li>the help directory of the currently selected version of Dyalog.</li>
+</ul></li>
+<li>Edit <strong><em>Launchy</em></strong>'s INI file.</li>
+<li>Access Dyalog's online help</li>
+</ul>
 <div class="h_tag">
-<a href="#Notes" id="Notes" class="autoheader_anchor">
-<h2>Notes</h2>
+<a href="#Preconditions" id="Preconditions" class="autoheader_anchor">
+<h2>Preconditions</h2>
+</a>
+</div>
+<p><strong><em>Launchy</em></strong> is self-contained and does not rely on anything. It is a “bound executable”, meaning that it can run even on a machine with no Dyalog installed at all, although this would not make too much sense of course.</p>
+<div class="h_tag">
+<a href="#Documentation" id="Documentation" class="autoheader_anchor">
+<h2>Documentation</h2>
 </a>
 </div>
 <ul>
-<li>“workdir” is the directory which will become the current (or working) directory for any instance of Dyalog APL launched by Launchy.
-<p>If the INI entry does not exist or is empty or the specified directory then there will be no menu entry "Explore &gt; WorkDir</p></li>
+<li>Have a look at the “launchy_manual.html” file which provides details. This file will be shown in your default browser by pressing F1 in <strong><em>Launchy</em></strong> or by selecting “Help” from its menu.</li>
+<li>Pay attention to the INI file which should be self-explanatory for programmers.</li>
 </ul>
-<ul>
-<li>In case Launchy itself was launched with admin rights (by selecting “Run as administrator” from the context menu associated with Launchy exe for example) “Rights: extended” will be shown in the caption of Launchy's GUI.</li>
-</ul>
-<div class="h_tag">
-<a href="#Installation" id="Installation" class="autoheader_anchor">
-<h2>Installation</h2>
-</a>
-</div>
-<p>Move the contents of the ZIP file you've downloaded into the appropriate folder. <br>A good place might be:</p>
-<p><code>C:\Users\{YourUserName}\AppData\Local\Programs\Launchy\</code></p>
-<p>or</p>
-<p><code>C:\Users\All Users\AppData\Local\Programs\Dyalog\Launchy</code></p>
-<p>Notes:</p>
-<ul>
-<li><code>AppData</code> is by default invisible to ordinary users.</li>
-<li><code>Program Files</code> or <code>Program Files (x86)</code> are not exactly ideal because Microsoft now prevents applications to write to those folders. As a result Launchy would not be able to save any error information to the disk in case of a crash.</li>
-</ul>
-<p>Now remove “.RemoveMe” from the name of the INI file which is by then <code>Launchy.ini.RemoveMe</code>; this is a measure against overwriting you own INI file accidentally when you update Launchy one day.</p>
-<p>With a default RIDE installation it should work out of the box. With a non-standard installation of RIDE you need to make adjustments to the INI file.</p>
-<div class="h_tag">
-<a href="#How-to-update" id="How-to-update" class="autoheader_anchor">
-<h2>How to update</h2>
-</a>
-</div>
-<p>You can use the menu command “Check for updates…” from the Help menu to find out whether there is a newer version of Launchy available.</p>
-<ul>
-<li>Download Launchy.</li>
-<li>Replace all files in your current installation with the newly downloaded files.</li>
-<li>Compare <code>Launchy.ini</code> (your own INI file) with <code>Launchy.ini.RemoveMe</code> (the file you've just downloaded) in order to identify changes you have to adapt.
-<p>Using a tool like <a href="http://www.grigsoft.com/wincmp3.htm" class="external_link">CompareIt!</a> or <a href="https://www.scootersoftware.com/" class="external_link">Beyond Compare</a> is recommended for doing this.</p>
-<p>Then act sensibly and you will be fine.</p></li>
-<li>When everything works fine delete <code>Launchy.ini.RemoveMe</code>.</li>
-</ul>
-<div class="h_tag">
-<a href="#Errors" id="Errors" class="autoheader_anchor">
-<h2>Errors</h2>
-</a>
-</div>
-<p>In case Launchy crashes, for example because of an invalid or missing INI file entry, then some files are written into a folder <code>Errors\</code> within the folder that hosts Launchy's EXE file. These files, in particular the HTML file but also the workspace, should allow you to identify and fix the problem.</p>
-<p>However, if that does not work for you then please zip those files and send them to kai@aplteam.com.</p>
-<div class="h_tag">
-<a href="#RIDE" id="RIDE" class="autoheader_anchor">
-<h2>RIDE</h2>
-</a>
-</div>
-<p><strong>Note:</strong> With version 5.0.0 Launchy only support Ride 4.0 and higher.</p>
-<p>Since version 2.9 Launchy requires all versions of Ride to be installed into the same directory. The INI entries <code>path2ride2</code> and <code>path2ride3</code> are no longer supported and <strong>must not</strong> be present in the INI file. Instead you may specify <code>[Ride]path2ride</code>. If this is not present then no Ride command is shown at all in the “File” menu.</p>
-<p>Note that by default Ride is installed into <code>%LocalAppData%\Dyalog\Ride</code> until and including version 4.0 and <code>%LocalAppData%\Dyalog\Ride-4.1</code> since version 4.1.</p>
-<p>With version 2.6 Launchy will work (again) out of the box as long as you have a default RIDE installation, or no RIDE at all. Only if you have installed RIDE into a non-standard location needs the INI file attention in this respect.</p>
-<p>Ride version 4.1 supports the environment variable RIDE_PREFS which if present must specify a fully qualified filename pointing to a Ride preference file. By default the preference file is <code>%AppData%\Ride</code> ; this can be used to place the preference file used by Ride somewhere else like a DropBox managed folder etc.</p>
-<p>You can tell Launchy to start Ride with <code>RIDE_PREFS</code> set by specifying an entry in Launchy's INI file:</p>
-<pre><code>[Ride]
-profile     =   'C:\some\folder\prefs.json'</code></pre>
-<div class="h_tag">
-<a href="#Admin-rights" id="Admin-rights" class="autoheader_anchor">
-<h2>Admin rights</h2>
-</a>
-</div>
-<p>I keep getting bug reports because drag-and-drop sometimes does not work on the status bar of the session or any GUIs created with <code>⎕WC</code>. This is because you have started Dyalog with the check box “Run as admin once” ticked. Microsoft considers drag-and-drop to be too dangerous in such cases, and there is nothing that can be done about this.</p>
-<p>However, with version 3.0 the check box “Run admin once” unticks itself, so you cannot forget any more that you've ticked it.</p>
-<div class="h_tag">
-<a href="#Default-version" id="Default-version" class="autoheader_anchor">
-<h2>Default version</h2>
-</a>
-</div>
-<p>Note that the default version of Dyalog APL to be used is saved on a per-user basis in the Windows Registry.</p>
-<p>If there is no such RegKey yet, the first of the list of all installed APLs is defined as default. The user might change this at any time by selecting the appropriate version and then selecting “Make currently selected APL the defaults” from the “Options” menu.</p>
-<p>The default is used in two scenarios:</p>
-<ul>
-<li>When Launchy is fired up the default version is pre-selected.</li>
-<li>By selecting “Select the default version” from the “Options” menu (F5) you can easily jump to the default version.</li>
-</ul>
-<div class="h_tag">
-<a href="#License-copyright-creator" id="License-copyright-creator" class="autoheader_anchor">
-<h2>License, copyright, creator</h2>
-</a>
-</div>
-<p>Launchy was created by Kai Jaeger. It is sponsored by APL Team Ltd.</p>
-<p>Launchy comes with an MIT license.</p>
-<p>For details go to <a href="https://github.com/aplteam/launchy" class="external_link">https://github.com/aplteam/launchy</a></p>
 </body>
 </html>
