--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta charset="utf-8">
-<title>Launchy Manual</title>
+<title>Launchy Release Notes</title>
 <style media="screen">
 html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}body{margin:0;}article,aside,footer,header,nav,section{display:block;}h1{font-size:2em;margin:0.67em 0;}figcaption,figure,main{display:block;}figure{margin:1em 40px;}hr{box-sizing:content-box;height:0;overflow:visible;}pre{font-family:monospace, monospace;font-size:1em;}a{background-color:transparent;-webkit-text-decoration-skip:objects;}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted;}b,strong{font-weight:inherit;}b,strong{font-weight:bolder;}code,kbd,samp{font-family:monospace, monospace;font-size:1em;}dfn{font-style:italic;}mark{background-color:#ff0;color:#000;}small{font-size:0.8em;}sub,sup{font-size:0.75em;line-height:0;position:relative;vertical-align:baseline;}sub{bottom:-0.25em;}sup{top:-0.5em;}audio,video{display:inline-block;}audio:not([controls]){display:none;height:0;}img{border-style:none;}svg:not(:root){overflow:hidden;}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:1em;line-height:1.15;margin:0;}button,input{overflow:visible;}button,select{text-transform:none;}button,html [type="button"], [type="reset"],[type="submit"]{-webkit-appearance:button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{border-style:none;padding:0;}button:-moz-focusring,[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring{outline:1px dotted ButtonText;}fieldset{padding:0.35em 0.75em 0.625em;}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal;}progress{display:inline-block;vertical-align:baseline;}textarea{overflow:auto;}[type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0;}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto;}[type="search"]{-webkit-appearance:textfield;outline-offset:-2px;}[type="search"]::-webkit-search-cancel-button,[type="search"]::-webkit-search-decoration{-webkit-appearance:none;}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit;}details, menu{display:block;}summary{display:list-item;}canvas{display:inline-block;}template{display:none;}[hidden]{display:none;}body{margin:0;font-family:"Bookman Old Style", "Callisto MT", Bookman, "Goudy Old Style", Garamond, serif;background-color:#fdfdfd;font-size:18px;line-height:1.4;max-width:900px;padding:0.83em;color:#292929;word-wrap:break-word;overflow-wrap:break-word;}h1, h2, h3, h4, h5, h6{color:#404040;font-weight:800;padding-left:0;}h1, h2, h3, h4, h5, h6{font-family:"Century Gothic", Verdana, "Sans";}h1, h2, h3, h4, p{margin-bottom:0.88em;}h1{font-size:1.8em;margin:0.27em 0 1.11em 0;}h1 > code, h2 > code, h3 > code, h4 > code, h5 > code, h6 > code{font-size:1em;background-color:inherit;}h2{font-size:1.44em;margin:0.55em 0 0.55em 0;padding-top:0.55em;border-bottom:1px solid Silver;}h3{margin:0;margin-top:0.55em;font-size:1.22em;}nav h3{font-size:0.88em;margin-left:0.83em;margin-bottom:0.27em;}h4{font-size:1em;margin:0;margin-top:0.55em;}h5{font-size:0.94em;margin:0;margin-top:0.66em;padding:0;}h6{font-size:0.88em;margin:0;margin-top:0.66em;padding:0;}a{color:#0099ff;margin:0;padding:0;vertical-align:baseline;}a:visited{color:purple;}a.autoheader_anchor{text-decoration:none;}ul{list-style-type:disc;}ul, ol{padding:0;margin:0;}dd{padding-top:0.25em;}p.first_dd{padding-top:0.25em;}li > ul, ol{padding-bottom:0;}li{line-height:1.3;margin-left:1.38em;margin-bottom:0.55em;}ul > li{margin-left:1.11em;}li ul{margin-left:0.55em;}li ul{margin-left:0.27em;}li p{padding:1px 0 0 0;margin:0.55em 0 0.27em 0;line-height:1.3;}p, ul, ol{line-height:1.3;padding:0.44em 0 0 0;margin:0;}pre{overflow:scroll;padding:0.55em 0.27em;margin:0.55em 0 0.55em 0 !important;background-color:#faebd7;color:#3e3e3e;border:1px Silver dashed;display:block;font-family:APLFont, monospace;font-weight:normal;white-space:pre-wrap;}pre > code{line-height:1.2;border:0;padding:0;margin:0;background-color:inherit;color:inherit;font-weight:inherit;white-space:pre-wrap;}a code{padding:0;font-size:1em;}nav code{background-color:inherit;font-weight:400;color:inherit;}code{font-family:APLFont, monospace;background-color:#e7e7e7;color:Black;font-weight:800;line-height:1.2;font-size:0.88em;margin:0;color:#950000;padding:0 0.16em;}tbody tr:nth-child(even){background-color:#F0F0F0;}th{background-color:#E6E6E6;color:black;}th, td{padding:0.16em 0.55em;}table{border-color:Black;margin:1.11em 0 1.11em 0;border:2px black;border-collapse:collapse;font-family:APLFont;font-size:0.88em;line-height:1.2;border:1px solid Gray;}li > table{margin:0.55em 0 0.55em 0;}tr{margin:1.11em;}th{font-weight:bold;}tfoot td{font-weight:bold;}blockquote{border-left:0.27em solid silver;padding-left:0.27em;margin:0.83em 0.27em 0.83em 0.55em;}blockquote ul li{margin-left:1.38em;}blockquote ol li{margin-left:1.38em;}li > blockquote{margin-left:0;}nav{background-color:#f5f5f5;border:1px solid Black;padding:0.55em;margin:0.55em;margin-right:0;box-shadow:0.27em 0.27em 0.27em Gray;overflow:hidden;}nav#main_nav{position:fixed;top:0;right:0.55em;float:none;width:auto;}nav#main_nav_no_collapse li{font-size:0.77rem;}nav#main_nav_no_collapse li{line-height:1.5;}nav ul{list-style-type:none;margin:0 0 0.11em 0;padding:0;}nav a:visited{color:black;}nav ul li{margin-bottom:0.16em;}nav li p{margin:0;padding:0;line-height:1;margin:0;padding:0;}nav li{font-size:0.75rem;line-height:1.3;padding:0;margin-top:0;margin-bottom:0;margin-left:0.83em;}nav p{font-weight:bold;font-size:0.75rem;padding-top:0;}dl{margin-top:0.1em;margin-bottom:0.1em;}dt{margin-top:0.75em;margin-bottom:0.1em;font-weight:800;}label#hide_toc_label{font-size:0.8em;}.toc-container{position:relative;height:auto;}div.toc-container h1{font-size:0.88em;margin:0.27em 0 0.27em 0;}[type="checkbox"]{position:absolute;left:-9999px;}label{display:block;width:100%;height:1.1em;cursor:pointer;top:0;padding-left:1.1em;}label:before{content:'Table of contents \25BC';font-weight:bold;font-size:90%;padding-bottom:0;}[type="checkbox"] ~ div{display:none;}[type="checkbox"]:checked ~ div{display:block;margin-top:1.1em;}[type="checkbox"]:checked + label{top:100%;}[type="checkbox"]:checked + label:before{content:'Table of contents ▲';}div#footnotes_div p{line-height:1;padding-bottom:0;padding-top:0;}div#footnotes_div ol{padding-top:0;}@font-face{font-family:"APLFont";src:local("APL385 Unicode"), url("http://misc.aplteam.com/apl385.ttf") format("truetype");}.no_display{display:none;}.red{color:red;}img{margin-top:0.55em;margin-bottom:0.27em;}div.leanpub{padding:0.83em 0.55em 1.11em 0;margin:0.55em 0 0 0.27em;overflow:auto;}div.leanpub_A{border:1px solid black;background-color:#f1f1f1;padding:0.55em;margin:1.11em 0 0.83em 0;}div.leanpub h3, div.leanpub_A h3{font-size:1.2em;padding:0;margin:0;}div.leanpub h4, div.leanpub_A h4{font-size:1.1em;padding:0.27em 0 0 0;margin:0;}div.leanpub h5, div.leanpub h5{font-size:1.0em;padding:0.27em 0 0 0;margin:0;}div.leanpub_A h5, div.leanpub_A h5{font-size:1.0em;padding:0.27em 0 0 0;margin:0;}div.leanpub img{padding:0;margin:0 1.11em 0.27em 0;}div.leanpub_A > p:first-child{padding-top:0;margin-top:0;}div.leanpub img{float:left;padding:0;margin:0.55em 1.11em 0 0;clear:both;}div.leanpub tbody *{background-color:transparent;}div.leanpub p{padding:0.17em 0 0 0;margin:0;}span.leanpub_code{color:Red;}div.leanpub p{display:block;padding:0.44em 0 0 0;}div.leanpub > div{margin-left:2.27em;}.print_only{display:none;}
 </style>
@@ -14,122 +14,26 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}b
 </head>
 <body>
 <div class="h_tag">
-<a href="#Launchy-User-Manual" id="Launchy-User-Manual" class="autoheader_anchor">
-<h1>Launchy User Manual</h1>
+<a href="#Launchy-Release-Notes" id="Launchy-Release-Notes" class="autoheader_anchor">
+<h1>Launchy Release Notes</h1>
 </a>
 </div>
 <div class="h_tag">
-<a href="#Overview" id="Overview" class="autoheader_anchor">
-<h2>Overview</h2>
-</a>
-</div>
-<p><img src="http://misc.aplteam.com/launchy.ico" width="32" height="32" alt="Launchy's icon" title="Launchy's icon"> Launchy is designed to address the needs of developers who have more than just one version of Dyalog APL installed on their machine. It investigates the Windows Registry in order to work out which versions of Dyalog APL are installed and offers them in a drop-down control for selection.</p>
-<p>This makes it easy to run any version of Dyalog APL. It also allows…</p>
-<ul>
-<li>setting certain flags like PropertyExposeRoot</li>
-<li>specifying the workspace size</li>
-<li>setting debug flags</li>
-<li>specifying additional command line parameters</li>
-<li>running (or ignoring) a user define setup.dyalog script</li>
-<li>starting the APL interpreter in elevated mode (admin right required)</li>
-<li>specifying size and posn of edit and trace windows</li>
-<li>giving the interpreter a Ride.</li>
-</ul>
-<p>Note that Launchy is a Windows-only application.</p>
-<div class="h_tag">
-<a href="#Installation" id="Installation" class="autoheader_anchor">
-<h2>Installation</h2>
-</a>
-</div>
-<p>Download the installer EXE: since version 6.0.0 Launchy has its own installer.</p>
-<p>With a default RIDE installation it should work out of the box. With a non-standard installation of RIDE you need to make adjustments to the INI file; see next topic.</p>
-<div class="h_tag">
-<a href="#Upgrading" id="Upgrading" class="autoheader_anchor">
-<h2>Upgrading</h2>
-</a>
-</div>
-<p>Refer to the Launchy_RelaseNotes.html file.</p>
-<div class="h_tag">
-<a href="#Amendments" id="Amendments" class="autoheader_anchor">
-<h2>Amendments (INI file)</h2>
-</a>
-</div>
-<p>Launchy comes with reasonable defaults specified in the INI file. The INI file is installed in <code>%localappdata%'),'\Launchy</code>, meaning that it can be changed even without admin rights. On a standard Windows installation this would be <code>C:\Users\{username}\AppData\Local\Launchy</code></p>
-<p>For a programmer it will be self explanatory what the INI file entries are all about, with the noticeable exception of the [WS_CHECK] section. It is not recommended to delete or change that section.</p>
-<p>In addition to the general INI file one can also specify an INI file named <code>Launchy_{machineName}.ini</code> which will only be instantiated on machines with matching names. This allows one to specify machine dependent INI entries, “CONFIG:wssize”, “CONFIG:workdir” and “FONT:Size” being the most obvious candidates.</p>
-<div class="h_tag">
-<a href="#Notes" id="Notes" class="autoheader_anchor">
-<h2>Notes</h2>
+<a href="#600-from-2019-05-16" id="600-from-2019-05-16" class="autoheader_anchor">
+<h2>6.0.0 from 2019-05-16</h2>
 </a>
 </div>
 <ul>
-<li>“workdir” is the directory which will become the current (or working) directory for any instance of Dyalog APL launched by Launchy.
-<p>If the INI entry does not exist or is empty or the specified directory does not exists then there will be no menu entry “Explore &gt; WorkDir”</p></li>
+<li>Launchy now has an installer.</li>
+<li>Plenty of minor improvements.</li>
+<li>Bug fixes: #18, #19, #15, #14, #13 and #16.</li>
 </ul>
-<ul>
-<li>In case Launchy itself was launched with admin rights (by selecting “Run as administrator” from the context menu associated with Launchy exe for example) “(elevated)” will be shown in the caption of Launchy's GUI.</li>
-</ul>
-<div class="h_tag">
-<a href="#How-to-update" id="How-to-update" class="autoheader_anchor">
-<h2>How to update</h2>
-</a>
-</div>
-<p>You can use the menu command “Check for updates…” from the Help menu to find out whether there is a newer version of Launchy available.</p>
-<ul>
-<li>Download Launchy</li>
-<li>Double-click the installer EXE</li>
-<li>Check whether “Launchy_Manual.html” contains any warnings regarding stuff like added INI entries etc. These will be shown prominently at the top of the document.</li>
-</ul>
-<div class="h_tag">
-<a href="#Errors" id="Errors" class="autoheader_anchor">
-<h2>Errors</h2>
-</a>
-</div>
-<p>In case Launchy crashes, for example because of an invalid or missing INI file entry, then some files are written into a folder <code>%localappdata%'),'\Launchy\Errors\</code>. These files, in particular the HTML file but also the workspace, should allow you to identify and fix the problem.</p>
-<p>However, if that does not work for you then please zip those files and send them to info@aplteam.com.</p>
-<div class="h_tag">
-<a href="#RIDE" id="RIDE" class="autoheader_anchor">
-<h2>RIDE</h2>
-</a>
-</div>
-<p>Notes:</p>
+<p>If you upgrade from an earlier version to 6.0.0 then carry out the following steps:</p>
 <ol start="1">
-<li>With version 5.0.0 Launchy only supports Ride 4.0 and higher.</li>
-<li>Since version 2.9 Launchy requires all versions of Ride to be installed into the same directory. The INI entries <code>path2ride2</code> and <code>path2ride3</code> are no longer supported and <strong>must not</strong> be present in the INI file. Instead you may specify <code>[Ride]path2ride</code>. If this is not present then no Ride command is shown at all in the “File” menu.</li>
-<li>By default Ride is installed into <code>%LocalAppData%\Dyalog\Ride</code> until and including version 4.0 and <code>%LocalAppData%\Dyalog\Ride-4.1</code> since version 4.1.</li>
-<li>With version 2.6 Launchy will work (again) out of the box as long as you have a default RIDE installation, or no RIDE at all. Only if you have installed RIDE into a non-standard location needs the INI file attention in this respect.</li>
-<li>Ride version 4.1 supports the environment variable <code>RIDE_PREFS</code> which if present must specify a fully qualified filename pointing to a Ride preference file. By default the preference file lives in <code>%AppData%\Ride</code>.
-<p>By setting <code>RIDE_PREFS</code> you can make Ride use a preference file that lives somewhere else like a DropBox-managed folder etc.</p>
-<p>You can tell Launchy to start Ride with <code>RIDE_PREFS</code> set by specifying an entry in Launchy's INI file:</p>
-<pre><code>[Ride]
-profile     =   'C:\some\folder\prefs.json'</code></pre></li>
+<li>Install Launchy with its installer.</li>
+<li>Compare the INI file from the old version with the new one in order to save your amendments.
+<p>(Skip this step in case you are sure that you did not change/add anything to the INI file)</p></li>
+<li>Remove the earlier version from your machine.</li>
 </ol>
-<div class="h_tag">
-<a href="#Admin-rights" id="Admin-rights" class="autoheader_anchor">
-<h2>Admin rights</h2>
-</a>
-</div>
-<p>I keep getting bug reports because drag-and-drop sometimes does not work on the status bar of the session or any GUIs created with <code>⎕WC</code>. This is because you have started Dyalog with the check box “Run as admin once” ticked. Microsoft considers drag-and-drop to be too dangerous in such cases, and there is nothing that can be done about this.</p>
-<p>However, with version 3.0 the check box “Run admin once” unticks itself, so you cannot forget any more that you've ticked it.</p>
-<div class="h_tag">
-<a href="#Default-version" id="Default-version" class="autoheader_anchor">
-<h2>Default version</h2>
-</a>
-</div>
-<p>Note that the default version of Dyalog APL to be used is saved on a per-user basis in the Windows Registry.</p>
-<p>If there is no such RegKey yet, the first of the list of all installed APLs is defined as default. The user might change this at any time by selecting the appropriate version and then selecting “Make currently selected APL the defaults” from the “Options” menu.</p>
-<p>The default is used in two scenarios:</p>
-<ul>
-<li>When Launchy is fired up the default version is pre-selected.</li>
-<li>By selecting “Select the default version” from the “Options” menu (F5) you can easily jump to the default version.</li>
-</ul>
-<div class="h_tag">
-<a href="#License-copyright-creator" id="License-copyright-creator" class="autoheader_anchor">
-<h2>License, copyright, creator</h2>
-</a>
-</div>
-<p>Launchy was created by Kai Jaeger. It is sponsored by APL Team Ltd.</p>
-<p>Launchy comes with an MIT license.</p>
-<p>For details go to <a href="https://github.com/aplteam/launchy" class="external_link">https://github.com/aplteam/launchy</a></p>
 </body>
 </html>
