'\''Check for update'\'' was unreliable

--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -19,21 +19,19 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}b
 </a>
 </div>
 <div class="h_tag">
-<a href="#600-from-2019-05-16" id="600-from-2019-05-16" class="autoheader_anchor">
-<h2>6.0.0 from 2019-05-16</h2>
+<a href="#602-from-2019-05-30" id="602-from-2019-05-30" class="autoheader_anchor">
+<h2>6.0.2 from 2019-05-30</h2>
+</a>
+</div>
+<p>The download URL provided by the REST API turned out to be unreliable. The only things we can do is a) find out whether their is a better version available and b), after prompting the user, put the “Releases” page on display with the default browser.</p>
+<div class="h_tag">
+<a href="#601-from-2019-05-30" id="601-from-2019-05-30" class="autoheader_anchor">
+<h2>6.0.1 from 2019-05-30</h2>
 </a>
 </div>
 <ul>
-<li>Launchy now has an installer.</li>
-<li>Plenty of minor improvements.</li>
-<li>Bug fixes: #18, #19, #15, #14, #13 and #16.</li>
+<li>Status bar problem fixed.</li>
+<li>When trying to patch a single instance of Dyalog Launchy crashed.</li>
 </ul>
-<p>If you upgrade from an earlier version to 6.0.0 then carry out the following steps:</p>
-<ol start="1">
-<li>Install Launchy with its installer.</li>
-<li>Compare the INI file from the old version with the new one in order to save your amendments.
-<p>(Skip this step in case you are sure that you did not change/add anything to the INI file)</p></li>
-<li>Remove the earlier version from your machine.</li>
-</ol>
 </body>
 </html>
