--- a/Launchy_manual.html
+++ b/Launchy_manual.html
@@ -44,17 +44,12 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}b
 <p>Download the installer EXE: since version 6.0.0 Launchy has its own installer.</p>
 <p>With a default RIDE installation it should work out of the box. With a non-standard installation of RIDE you need to make adjustments to the INI file; see next topic.</p>
 <div class="h_tag">
-<a href="#Upgrading" id="Upgrading" class="autoheader_anchor">
-<h2>Upgrading</h2>
-</a>
-</div>
-<p>Refer to the Launchy_RelaseNotes.html file.</p>
-<div class="h_tag">
 <a href="#Amendments" id="Amendments" class="autoheader_anchor">
 <h2>Amendments (INI file)</h2>
 </a>
 </div>
-<p>Launchy comes with reasonable defaults specified in the INI file. The INI file is installed in <code>%localappdata%'),'\Launchy</code>, meaning that it can be changed even without admin rights. On a standard Windows installation this would be <code>C:\Users\{username}\AppData\Local\Launchy</code></p>
+<p>Launchy comes with reasonable defaults specified in the INI file. Normally their will be no need to make amendments to this INI file.</p>
+<p>The INI file is installed in <code>%localappdata%'),'\Launchy</code>, meaning that it can be changed even without admin rights. On a standard Windows installation this would be <code>C:\Users\{username}\AppData\Local\Launchy</code></p>
 <p>For a programmer it will be self explanatory what the INI file entries are all about, with the noticeable exception of the [WS_CHECK] section. It is not recommended to delete or change that section.</p>
 <p>In addition to the general INI file one can also specify an INI file named <code>Launchy_{machineName}.ini</code> which will only be instantiated on machines with matching names. This allows one to specify machine dependent INI entries, “CONFIG:wssize”, “CONFIG:workdir” and “FONT:Size” being the most obvious candidates.</p>
 <div class="h_tag">
@@ -74,7 +69,7 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}b
 <h2>How to update</h2>
 </a>
 </div>
-<p>You can use the menu command “Check for updates…” from the Help menu to find out whether there is a newer version of Launchy available.</p>
+<p>You can use the menu command “Check for updates…” from the Help menu to find out whether there is a better version of Launchy available.</p>
 <ul>
 <li>Download Launchy</li>
 <li>Double-click the installer EXE</li>
