--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -19,19 +19,12 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}b
 </a>
 </div>
 <div class="h_tag">
-<a href="#602-from-2019-05-30" id="602-from-2019-05-30" class="autoheader_anchor">
-<h2>6.0.2 from 2019-05-30</h2>
-</a>
-</div>
-<p>The download URL provided by the REST API turned out to be unreliable. The only things we can do is a) find out whether their is a better version available and b), after prompting the user, put the “Releases” page on display with the default browser.</p>
-<div class="h_tag">
-<a href="#601-from-2019-05-30" id="601-from-2019-05-30" class="autoheader_anchor">
-<h2>6.0.1 from 2019-05-30</h2>
+<a href="#610-from-2019-06-02" id="610-from-2019-06-02" class="autoheader_anchor">
+<h2>6.1.0 from 2019-06-02</h2>
 </a>
 </div>
 <ul>
-<li>Status bar problem fixed.</li>
-<li>When trying to patch a single instance of Dyalog Launchy crashed.</li>
+<li>Extracts the download URL for a new version of Launchy from GitHub's “Releases” HTML page and then uses this URL to download the installer via your default browser.</li>
 </ul>
 </body>
 </html>
