--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -19,12 +19,14 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}b
 </a>
 </div>
 <div class="h_tag">
-<a href="#611-from-2019-06-" id="611-from-2019-06-" class="autoheader_anchor">
-<h2>6.1.1 from 2019-06-??</h2>
+<a href="#620-from-2019-06-30" id="620-from-2019-06-30" class="autoheader_anchor">
+<h2>6.2.0 from 2019-06-30</h2>
 </a>
 </div>
 <ul>
-<li>…</li>
+<li>The user may now decide to ignore Dyalog versions without DSS credentials when patching; handy for beta versions.</li>
+<li>“Check for new version” updated to latest <code>GitHubAPIv3</code>.</li>
+<li>Bug fix: the <code>exec_setup</code> option was lacking a hyphen. That potentially posed a problem when other flags were specified on the command line.</li>
 </ul>
 <div class="h_tag">
 <a href="#610-from-2019-06-02" id="610-from-2019-06-02" class="autoheader_anchor">
