Check box <Stop in setup.dyalog> added plus bug fixes and doc improvements

--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -19,22 +19,18 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}b
 </a>
 </div>
 <div class="h_tag">
-<a href="#620-from-2019-06-30" id="620-from-2019-06-30" class="autoheader_anchor">
-<h2>6.2.0 from 2019-06-30</h2>
+<a href="#630-from-2019-07-27" id="630-from-2019-07-27" class="autoheader_anchor">
+<h2>6.3.0 from 2019-07-27</h2>
 </a>
 </div>
 <ul>
-<li>The user may now decide to ignore Dyalog versions without DSS credentials when patching; handy for beta versions.</li>
-<li>“Check for new version” updated to latest <code>GitHubAPIv3</code>.</li>
-<li>Bug fix: the <code>exec_setup</code> option was lacking a hyphen. That potentially posed a problem when other flags were specified on the command line.</li>
-</ul>
-<div class="h_tag">
-<a href="#610-from-2019-06-02" id="610-from-2019-06-02" class="autoheader_anchor">
-<h2>6.1.0 from 2019-06-02</h2>
-</a>
-</div>
+<li>Check box “Stop in setup.dyalog” introduced. When ticked the flag <code>-stop_in_setup</code> is added to the command line.</li>
+<li>Documenation improved regarding “Execute setup.dyalog”</li>
+<li>Bug fixes:
 <ul>
-<li>Extracts the download URL for a new version of Launchy from GitHub's “Releases” HTML page and then uses this URL to download the installer via your default browser.</li>
+<li>The tips for all flags were not displayed.</li>
+</ul></li>
 </ul>
+<p>A complete history of release notes is <a href="https://github.com/aplteam/Launchy/releases" class="external_link">available on GitHub</a></p>
 </body>
 </html>
