--- a/Launchy_manual.html
+++ b/Launchy_manual.html
@@ -83,6 +83,26 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}b
 <p>In case Launchy crashes, for example because of an invalid or missing INI file entry, then some files are written into a folder <code>%localappdata%'),'\Launchy\Errors\</code>. These files, in particular the HTML file but also the workspace, should allow you to identify and fix the problem.</p>
 <p>However, if that does not work for you then please zip those files and send them to info@aplteam.com.</p>
 <div class="h_tag">
+<a href="#Setupdyalog" id="Setupdyalog" class="autoheader_anchor">
+<h2>Setup.dyalog</h2>
+</a>
+</div>
+<p>If Dyalog finds a file <code>Setup.dyalog</code> either in any of the User Command folders or in <code>%USERPROFILE%\Documents\MyUCMDs</code> then a function <code>Setup</code> within that file is executed. This is perfect for making amendments to your session etc.</p>
+<div class="h_tag">
+<a href="#The-check-box-Execute-setupdyalog" id="The-check-box-Execute-setupdyalog" class="autoheader_anchor">
+<h3>The check box “Execute setup.dyalog”</h3>
+</a>
+</div>
+<p>There might be situations when you <strong><em>do not</em></strong> want <code>setup.dyalog</code> to be executed. For that you can un-tick the box “Execute setup.dyalog”. Launchy then passes <code>-exec_setup=0</code> (default is <code>-exec_setup=1</code>) as a command line parameter.</p>
+<p>Note that it is up to the script itself to honour this settings.</p>
+<div class="h_tag">
+<a href="#The-check-box-Stop-in-setupdyalog" id="The-check-box-Stop-in-setupdyalog" class="autoheader_anchor">
+<h3>The check box “Stop in setup.dyalog”</h3>
+</a>
+</div>
+<p>By default this check box is not ticked. If you tick it then the flag <code>-stop_in_setup</code> is passed as command line parameter.</p>
+<p>Note that it is up to the script itself to honour this settings.</p>
+<div class="h_tag">
 <a href="#RIDE" id="RIDE" class="autoheader_anchor">
 <h2>RIDE</h2>
 </a>
@@ -125,6 +145,6 @@ profile     =   'C:\some\folder\prefs.json'</code></pre></li>
 </div>
 <p>Launchy was created by Kai Jaeger. It is sponsored by APL Team Ltd.</p>
 <p>Launchy comes with an MIT license.</p>
-<p>For details go to <a href="https://github.com/aplteam/launchy" class="external_link">https://github.com/aplteam/launchy</a></p>
+<p>For details go to <a href="https://github.com/aplteam/Launchy" class="external_link">https://github.com/aplteam/Launchy</a></p>
 </body>
 </html>
