--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -19,6 +19,15 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}b
 </a>
 </div>
 <div class="h_tag">
+<a href="#701-from-2020-07-26" id="701-from-2020-07-26" class="autoheader_anchor">
+<h2 data-id="701-from-2020-07-26">7.0.1 from 2020-07-26</h2>
+</a>
+</div>
+<ul>
+<li>Launchy crashed in case the APL the was the default disappeared.</li>
+<li>In WSL, only versions better than 17.0 can be started. The reason is that 17.0 does not connect with Ride though syntactically all is fine.</li>
+</ul>
+<div class="h_tag">
 <a href="#700-from-2020-06-10" id="700-from-2020-06-10" class="autoheader_anchor">
 <h2 data-id="700-from-2020-06-10">7.0.0 from 2020-06-10</h2>
 </a>
