Bug fix regarding stop_in_setup and exec_setup

--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -19,6 +19,15 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}b
 </a>
 </div>
 <div class="h_tag">
+<a href="#711-from-2021-04-01" id="711-from-2021-04-01" class="autoheader_anchor">
+<h2 data-id="711-from-2021-04-01">7.1.1 from 2021-04-01</h2>
+</a>
+</div>
+<ul>
+<li>Bug fix: Version 7.1.0 introduced a bug: both command line parameters <code>stop_in_setup</code> and <code>exec_setup=0</code> were not provided with a leading hyphen as they should.
+<p>If you do not use either of them then in your <code>Ssetup.dyalog</code> then there is no point in upgrading.</p></li>
+</ul>
+<div class="h_tag">
 <a href="#710-from-2021-03-29" id="710-from-2021-03-29" class="autoheader_anchor">
 <h2 data-id="710-from-2021-03-29">7.1.0 from 2021-03-29</h2>
 </a>
