--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -19,6 +19,14 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}b
 </a>
 </div>
 <div class="h_tag">
+<a href="#721-from-2021-09-10" id="721-from-2021-09-10" class="autoheader_anchor">
+<h2 data-id="721-from-2021-09-10">7.2.1 from 2021-09-10</h2>
+</a>
+</div>
+<ul>
+<li>The menu entry “Edit &gt; Launchy's INI file(s)” put only the principal INI files on display but not any machine specific one.</li>
+</ul>
+<div class="h_tag">
 <a href="#720-from-2021-09-07" id="720-from-2021-09-07" class="autoheader_anchor">
 <h2 data-id="720-from-2021-09-07">7.2.0 from 2021-09-07</h2>
 </a>
