Final commit for 7.4.0

--- a/Launchy_manual.html
+++ b/Launchy_manual.html
@@ -23,7 +23,7 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}b
 <h2 data-id="Overview">Overview</h2>
 </a>
 </div>
-<p><img src="http://misc.aplteam.com/launchy.ico" width="32" height="32" alt="Launchy's icon" title="Launchy's icon"> Launchy is designed to address the needs of developers who have more than just one version of Dyalog APL installed on their Windows machine. It investigates the Windows Registry in order to work out which versions of Dyalog APL are installed and offers them in a drop-down control for selection.</p>
+<p><img src="http://misc.aplteam.com/launchy.ico" width="32" height="32" alt="Launchy's icon" title="Launchy's icon"> Launchy is designed to address the needs of developers who have more than just one version of Dyalog APL installed on their Windows machine. It investigates the Windows Registry in order to work out which versions of Dyalog APL are installed, and offers them in a drop-down control for selection.</p>
 <p>This makes it easy to run any version of Dyalog APL. It also allows…</p>
 <ul>
 <li>setting certain flags like PropertyExposeRoot</li>
