--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -19,6 +19,22 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}b
 </a>
 </div>
 <div class="h_tag">
+<a href="#740-from-2022-03-21" id="740-from-2022-03-21" class="autoheader_anchor">
+<h2 data-id="740-from-2022-03-21">7.4.0 from 2022-03-21</h2>
+</a>
+</div>
+<ul>
+<li>The command line combo box got replaced by an edit field and a check box “Save on Quit”</li>
+<li>The feature to display the command line is active only when something is entered into the “Command line parameters” field, not when something for the command line comes from the INI.</li>
+<li>Keyboard shortcuts added/improved</li>
+<li>Bug fixes
+<ul>
+<li>The “Run as admin once” check box was not reset in terms of colour</li>
+<li>Some tips were not displayed</li>
+<li>Toggling tips did not work anymore</li>
+</ul></li>
+</ul>
+<div class="h_tag">
 <a href="#730-from-2021-10-05" id="730-from-2021-10-05" class="autoheader_anchor">
 <h2 data-id="730-from-2021-10-05">7.3.0 from 2021-10-05</h2>
 </a>
