Report added regarding .NET config

--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -19,6 +19,33 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;}b
 </a>
 </div>
 <div class="h_tag">
+<a href="#770-from-2023-10-02" id="770-from-2023-10-02" class="autoheader_anchor">
+<h2 data-id="770-from-2023-10-02">7.7.0 from 2023-10-02</h2>
+</a>
+</div>
+<ul>
+<li>The “Edit” menu has several new items:
+<ul>
+<li>.NET-bridge JSON files</li>
+<li>Version-specific dyalog.dcfg file</li>
+<li>Version-agnostic dyalog.dcfg file</li>
+</ul></li>
+<li>The “Explore” menu has new items:
+<ul>
+<li>[HOME]\Documents <br></li>
+<li>Report .NET configurations</li>
+</ul></li>
+</ul>
+<div class="h_tag">
+<a href="#762-from-2023-09-12" id="762-from-2023-09-12" class="autoheader_anchor">
+<h2 data-id="762-from-2023-09-12">7.6.2 from 2023-09-12</h2>
+</a>
+</div>
+<ul>
+<li>The “Restore defaults” should become active as soon as one of the checkboxes except “Save Command line on quit” is ticked
+<p>However, that was not the case for “No trapping in StartUp script” and “Stop within StartUp script”</p></li>
+</ul>
+<div class="h_tag">
 <a href="#761-from-2023-09-11" id="761-from-2023-09-11" class="autoheader_anchor">
 <h2 data-id="761-from-2023-09-11">7.6.1 from 2023-09-11</h2>
 </a>
