--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -25,6 +25,7 @@ html{-webkit-text-size-adjust:100%;}body{margin:0;}main{display:block;}h1{margin
 </div>
 <ul>
 <li>Check box “Use .NET Framework” added, which is ticked by default.</li>
+<li>Invalid INI files can now be edited straight away</li>
 </ul>
 <div class="h_tag">
 <a href="#770-from-2023-10-02" id="770-from-2023-10-02" class="autoheader_anchor">
